# totaling

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  justfile  pyproject.toml
nbs/: scratch.ipynb
src/totaling/: __init__.py  cli.py  core.py
